# src/backend/web/static/swagger/api_v3.json
@@ -4167,6 +4167,67 @@
           }
         ]
       }
+    },
+    "/insights/notables/{year}": {
+      "get": {
+        "tags": [
+          "insight",
+          "list"
+        ],
+        "description": "Gets a list of `NotablesInsight` objects from a specific year. Use year=0 for overall.",
+        "operationId": "getInsightsNotablesYear",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/If-None-Match"
+          },
+          {
+            "$ref": "#/components/parameters/year"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "headers": {
+              "Cache-Control": {
+                "description": "The `Cache-Control` header, in particular the `max-age` value, contains the number of seconds the result should be considered valid for. During this time subsequent calls should return from the local cache directly.",
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "ETag": {
+                "description": "Specifies the version of the most recent response. Used by clients in the `If-None-Match` request header.",
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/NotablesInsight"
+                  }
+                }
+              }
+            }
+          },
+          "304": {
+            "$ref": "#/components/responses/NotModified"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          }
+        },
+        "security": [
+          {
+            "apiKey": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -4821,23 +4882,23 @@
           },
           "current_level_record": {
             "anyOf": [
-                  {
-                    "$ref": "#/components/schemas/WLT_Record"
-                  },
-                  {
-                    "type": "null"
-                  }
-                ]
+              {
+                "$ref": "#/components/schemas/WLT_Record"
+              },
+              {
+                "type": "null"
+              }
+            ]
           },
           "record": {
             "anyOf": [
-                  {
-                    "$ref": "#/components/schemas/WLT_Record"
-                  },
-                  {
-                    "type": "null"
-                  }
-                ]
+              {
+                "$ref": "#/components/schemas/WLT_Record"
+              },
+              {
+                "type": "null"
+              }
+            ]
           },
           "status": {
             "type": "string",
@@ -4906,13 +4967,13 @@
                 },
                 "record": {
                   "anyOf": [
-                  {
-                    "$ref": "#/components/schemas/WLT_Record"
-                  },
-                  {
-                    "type": "null"
-                  }
-                ]
+                    {
+                      "$ref": "#/components/schemas/WLT_Record"
+                    },
+                    {
+                      "type": "null"
+                    }
+                  ]
                 },
                 "rank": {
                   "type": "integer",
@@ -8149,6 +8210,55 @@
           "name",
           "year"
         ]
+      },
+      "NotablesInsight": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "data": {
+              "type": "object",
+              "properties": {
+                "entries": {
+                "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "context": {
+                        "type": "array",
+                        "description": "A list of events this team achieved the notable at. This type may change over time.",
+                        "items": {
+                          "type": "string"
+                        }
+                      },
+                      "team_key": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "context",
+                      "team_key"
+                    ]
+                  }
+                }
+              },
+              "required": [
+                "entries"
+              ]
+            },
+            "name": {
+              "type": "string"
+            },
+            "year": {
+              "type": "integer"
+            }
+          },
+          "required": [
+            "data",
+            "name",
+            "year"
+          ]
+        }
       }
     },
     "responses": {
